# ollvm_prj

./: CMakeLists.txt
BasicBlock/: CMakeLists.txt  basic_pass.cpp
MyFlattening/: CMakeLists.txt  MyFlattening.cpp
ShowIR/: CMakeLists.txt  ShowIR.cpp
TestOb/: CMakeLists.txt  CryptoUtils.cpp  testFla.cpp
getName/: CMakeLists.txt  getName.cpp
itrBB/: CMakeLists.txt  itrBB.cpp
jhyun/: CMakeLists.txt  jhyun_pass.cpp
sobf/: CMakeLists.txt  sobf.cpp
tis/: CMakeLists.txt  tis.cpp
toCompare/: CMakeLists.txt  toCompare.cpp
