add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(Obfuscation)

add_subdirectory(BasicBlock)
add_subdirectory(itrBB)
add_subdirectory(jhyun)
add_subdirectory(ShowIR)
add_subdirectory(sobf)
