add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)

add_subdirectory(BasicBlock)
add_subdirectory(getName)
add_subdirectory(itrBB)
add_subdirectory(jhyun)
add_subdirectory(MyFlattening)
add_subdirectory(ShowIR)
add_subdirectory(MakeFla)
add_subdirectory(SplitBB)
